tests/snapshots/r#mod__neg_int.snap
---
source: tests/mod.rs
expression: "edn_parse(\"-123\").unwrap().cst"
---
edn [0..4]
    literal [0..4]
        Number "-123" [0..4]
