tests/snapshots/r#mod__newline_char.snap
---
source: tests/mod.rs
expression: "edn_parse(\"\\\\newline\").unwrap().cst"
---
edn [0..8]
    literal [0..8]
        Chars "\\newline" [0..8]
