tests/snapshots/r#mod__simple_char.snap
---
source: tests/mod.rs
expression: "edn_parse(\"\\\\c\").unwrap().cst"
---
edn [0..2]
    composed [0..2]
        char [0..2]
            CharEscape "\\" [0..1]
            Chars "c" [1..2]
