tests/snapshots/r#mod__tagged_collection.snap
---
source: tests/mod.rs
expression: "edn_parse(\"#domain/model\").unwrap().cst"
---
edn [0..13]
    composed [0..13]
        tagged [0..13]
            Hash "#" [0..1]
            Name "domain/model" [1..13]
